--- a/css/_style_importa_22-02-2021.css
+++ b/css/_style_importa_22-02-2021.css
@@ -1,95 +1,71 @@
-h2{
-	
-	background-color:#005ce6;
-	color:#fff;
-	height:60px;
+h2 {
+  background-color: #005ce6;
+  color: #fff;
+  height: 60px;
 }
-input[type='file'] {
-  display: none
+input[type="file"] {
+  display: none;
 }
-#comandos{
-	border-top:1px solid gray;
-	padding-top:0px;
-	text-align:center;
-	width:100%;
-	height:20%;
-	position:absolute;
-	bottom:0%;"
-	
+#comandos {
+  border-top: 1px solid gray;
+  padding-top: 0px;
+  text-align: center;
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  bottom: 0%;
 }
-.btn{
-	
-	width:300px;
-	padding:5px;
-	
-	
+.btn {
+  width: 300px;
+  padding: 5px;
 }
-.btn-excluir{
-	
-	width:100px;
-	font-size:12px;
-	position:relative;
-	
-	
+.btn-excluir {
+  width: 100px;
+  font-size: 12px;
+  position: relative;
 }
-#btn_seleciona{
-	width:130px;
-	height:40px;
-	text-align:center;
-	background-color:#1a75ff;
-	border-radius:3px;
-	color:#fff;
+#btn_seleciona {
+  width: 130px;
+  height: 40px;
+  text-align: center;
+  background-color: #1a75ff;
+  border-radius: 3px;
+  color: #fff;
 }
-#btn_seleciona:hover{
-	
-	background-color:#66a3ff;
-
+#btn_seleciona:hover {
+  background-color: #66a3ff;
 }
 /* CÓDIGO CSS PARA A PÁGINA IMPORTA*/
-video{
-    
-    margin: auto;
-}
-body{
-    
-    
-}
-#tabs{
-  background-color:; 
-  height:28px;
-}
-nav ul li{
-    
-    display: inline;
-    border-radius: 0px 0px 0px;
-    padding: 5px;
-    
-    
-  
-    
-}
-nav ul li a{
-    text-decoration: none;
-    font-family: robote;
-    color:#b9bff8;
-    font-weight: 700;
+video {
+  margin: auto;
 }
 
-nav ul li:hover{
-    text-decoration: none;
+#tabs {
+  height: 28px;
 }
-#imagens{
-   margin-top: 10px;
+nav ul li {
+  display: inline;
+  border-radius: 0px 0px 0px;
+  padding: 5px;
 }
-#videos{
-    
-     margin-top:10px;
-   
+nav ul li a {
+  text-decoration: none;
+  font-family: robote;
+  color: #b9bff8;
+  font-weight: 700;
 }
-li {
-	background-color:;
+
+nav ul li:hover {
+  text-decoration: none;
 }
-a:hover{
-	color:#000746;
-	text-decoration:none;
+#imagens {
+  margin-top: 10px;
+}
+#videos {
+  margin-top: 10px;
+}
+
+a:hover {
+  color: #000746;
+  text-decoration: none;
 }
