--- a/css/previsao.css
+++ b/css/previsao.css
@@ -1,37 +1,40 @@
-#container{
+#container h1 {
+  text-align: center;
+  color: #000;
+  font-size: 2em;
 }
-#container h1{
-	text-align:center;
-	color:#000;
-	font-size: 2em;
+#demo {
+  border-radius: 10px;
 }
-#demo{
-	border-radius:10px;
+#line_mes {
+  font-size: 50px;
+  border: 5px solid rgba(65, 105, 255, 0.9);
+  border-radius: 5px;
+  color: #fff;
+  background-color: rgba(65, 105, 255, 0.9);
+  text-shadow: 2px 2px 5px #000;
 }
-#line_mes{
-	font-size:50px;
-	border:5px solid rgba(65,105,255,0.9);
-	border-radius:5px;
-	color:#fff;
-	background-color:rgba(65,105,255,0.9);
-	text-shadow: 2px 2px 5px #000;
+#box_tempo {
+  font-size: 50px;
+  padding: 5px;
+  width: 90%;
+  height: auto;
+  margin: auto;
+  margin-bottom: 90px;
 }
-#box_tempo{
-	font-size:50px;
-	padding:5px;
-	width:90%;
-	height:auto;
-	margin:auto;
-	margin-bottom:90px;
+#box_dir {
+  float: right;
+  padding-right: 30px;
 }
-#box_dir{
-	float:right;
-	padding-right:30px;
+#box_esq {
+  float: left;
 }
-#box_esq{
-	float:left;
-
+#divUmidade {
+  width: auto;
+  padding-left: 30px;
 }
-#divUmidade{width:auto;padding-left:30px;}
-#fontetempo{ position:relative;margin:auto;text-align:center;
+#fontetempo {
+  position: relative;
+  margin: auto;
+  text-align: center;
 }
